infrastructure/k8s/prod/slack-notification-mongo.depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slack-notification-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slack-notification-mongo
  template:
    metadata:
      labels:
        app: slack-notification-mongo
    spec:
      containers:
        - name: slack-notification-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: slack-notification-mongo-service
spec:
  selector:
    app: slack-notification-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
