infrastructure/k8s/prod/slack-notification.depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slack-notification-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slack-notification
  template:
    metadata:
      labels:
        app: slack-notification
    spec:
      containers:
        - name: slack-notification
          image: us.gcr.io/notifyme-307219/slack-notification
---
apiVersion: v1
kind: Service
metadata:
  name: slack-notification-service
spec:
  selector:
    app: slack-notification
  ports:
    - name: slack-notification
      protocol: TCP
      port: 3000
      targetPort: 3000
